adjusted minor navbar & joke list js UI

--- a/assessment-fd/src/styles/Navbar.css
+++ b/assessment-fd/src/styles/Navbar.css
@@ -24,7 +24,7 @@
     margin-left: auto;
     white-space: pre-wrap;
     margin-right: 60px;
-    font-size: x-large;
+    font-size: large;
 }
 
 .span-right {
