set scroll in modal

--- a/assessment-fd/src/styles/renameModal.css
+++ b/assessment-fd/src/styles/renameModal.css
@@ -19,6 +19,8 @@
     padding: 20px 20px;
     z-index: 9999;
     border: 1px solid black;
+    height: 900px;
+    overflow: auto;
 } 
 
 .closeBtn {
