--- a/assessment-fd/src/styles/renameModal.css
+++ b/assessment-fd/src/styles/renameModal.css
@@ -19,7 +19,8 @@
     padding: 20px 20px;
     z-index: 9999;
     border: 1px solid black;
-    height: 900px;
+    height: auto;
+    max-height: 900px;
     overflow: auto;
 } 
 
